--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -13,9 +13,11 @@ body
 
 .developer
   .inner
+    display: block
     background-color: #fff
     overflow: hidden
     margin: 10px 0
+    text-decoration: none
     .profile-photo
       display: inline-block
     .name
@@ -24,3 +26,28 @@ body
       display: inline-block
       font-size: 20px
       vertical-align: middle
+  .header
+    background-color: #fff
+    overflow: hidden
+    img
+      float: left
+      margin-right: 20px
+    h1
+      display: inline-block
+      vertical-align: middle
+      font-size: 300%
+    .caption
+      margin-top: 10px
+      font-size: 150%
+
+  .highlights
+    background-color: #fff
+    padding: 10px
+    margin-top: 10px
+    font-size: 125%
+    ul
+      margin: 10px 0 0
+
+.nav-panel
+  padding: 10px 0
+  font-size: 150%
