Fixed detail view

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -47,6 +47,13 @@ body
     font-size: 125%
     ul
       margin: 10px 0 0
+    .glados-box
+      background-color: #fff
+      img
+        border-radius: 75px
+      .text
+        padding: 10px
+        font-size: 175%
 
 .nav-panel
   padding: 10px 0
